<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    android:visibility="visible"
    tools:context=".Activities.HomeScreen">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-150dp"
        android:backgroundTint="#E3E3E3"
        android:shadowColor="#E3E3E3"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:textColor="#000000"
        android:visibility="visible"
        app:iconTint="#E3E3E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:backgroundTint="#E3E3E3"
        android:shadowColor="#E3E3E3"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:textColor="#000000"
        app:iconTint="#E3E3E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="#E3E3E3"
        android:shadowColor="#E3E3E3"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:textColor="#000000"
        app:iconTint="#E3E3E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:backgroundTint="#E3E3E3"
        android:shadowColor="#E3E3E3"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:textColor="#000000"
        app:iconTint="#E3E3E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:backgroundTint="#E3E3E3"
        android:shadowColor="#E3E3E3"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:textColor="#000000"
        app:iconTint="#E3E3E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:backgroundTint="#E3E3E3"
        android:shadowColor="#E3E3E3"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:textColor="#000000"
        app:iconTint="#E3E3E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:backgroundTint="#E3E3E3"
        android:shadowColor="#E3E3E3"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:textColor="#000000"
        android:visibility="visible"
        app:iconTint="#E3E3E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#E3E3E3" />

    <TextView
        android:id="@+id/usersName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/audiowide_regular"
        android:text="TextView"
        android:textColor="#F1EC40"
        app:layout_constraintBottom_toTopOf="@+id/layoutTemplate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="120dp"
        android:fontFamily="@font/audiowide_regular"
        android:text="@string/NotesWithFriends"
        android:textColor="#F1EC40"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/layoutTemplate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newDocumentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        android:text="@string/NewDocument"
        app:layout_constraintBottom_toTopOf="@+id/layoutTemplate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/newFolderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="40dp"
        android:text="@string/NewFolder"
        app:layout_constraintBottom_toTopOf="@+id/layoutTemplate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <LinearLayout
        android:id="@+id/layoutTemplate"
        android:layout_width="325dp"
        android:layout_height="366dp"
        android:layout_marginBottom="36dp"
        android:background="#E3E3E3"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="88dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#121212"
        android:fontFamily="@font/audiowide_regular"
        android:text="@string/LogoutButton"
        android:textColor="#E3E3E3"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/testButton"
        android:layout_width="88dp"
        android:layout_height="39dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#121212"
        android:fontFamily="@font/audiowide_regular"
        android:text="test"
        android:textColor="#E3E3E3"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginEnd="26dp"
        android:text="Chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/logoutButton"
        app:layout_constraintTop_toBottomOf="@+id/refreshButton2" />

    <Button
        android:id="@+id/refreshButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="26dp"
        android:text="Refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logoutButton"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>